--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -70,7 +69,7 @@
 
     <img src="mockup-ebook.png" alt="Mockup do eBook" class="mockup" />
 
-    <a href="#comprar" class="cta-button">Quero Começar Agora</a>
+    <a href="https://pay.kiwify.com.br/9aVIGoJ" class="cta-button" target="_blank">Quero Começar Agora</a>
 
     <h2>O que você vai aprender:</h2>
     <ul style="text-align: left; max-width: 600px; margin: 0 auto;">
@@ -96,7 +95,7 @@
       <p><strong>Leonardo:</strong> Criou uma renda extra de R$ 2.000 em apenas 30 dias.</p>
     </div>
 
-    <a href="#comprar" class="cta-button">Garantir meu eBook</a>
+    <a href="https://pay.kiwify.com.br/9aVIGoJ" class="cta-button" target="_blank">Garantir meu eBook</a>
 
     <footer>
       &copy; 2025 Gabriel José Guimarães. Todos os direitos reservados.
