--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h1>Ganhe Dinheiro na Internet</h1>
     <p><strong>Descubra como transformar seu celular em uma fonte de renda com infoprodutos, dropshipping e muito mais.</strong></p>
 
-    <img src="mockup-ebook.png" alt="Mockup do eBook" class="mockup" />
+    <img src="https://i.imgur.com/0t2ejDt.png" alt="Mockup do eBook" class="mockup" />
 
     <a href="https://pay.kiwify.com.br/9aVIGoJ" class="cta-button" target="_blank">Quero Começar Agora</a>
 
